# agribot-v1_1

./: .gitignore  LICENSE  README.md  WEED_DETECTION_GUIDE.md  push.bat
agribot_firmware/: agribot_motor_control.ino
dashboard/: app.js  index.html  style.css
dashboard/libs/: eventemitter2.min.js  roslib.min.js
results/: metrics_summary.json
runs/agribot_v1_overhaul-4/: args.yaml  results.csv
runs/agribot_v1_overhaul-4/eval/: metrics_summary.json  per_class_ap50.json  per_image_metrics.csv
runs/agribot_v1_overhaul-4/eval_fixed/: metrics_summary.json  per_class_ap50.json  per_image_metrics.csv
runs/precision_agri/eval/: per_class_ap50.json  per_image_metrics.csv
runs/train/crop_weed_model/: args.yaml  results.csv
scripts/: production_overhaul.ps1
simulation/: README.md  play_bag.sh  verify_sim.py
simulation/mock_publishers/: agribot_sim_core.py
simulation/tests/: __init__.py  test_sim_core_headers.py
src/agribot_actuation/: package.xml  setup.cfg  setup.py
src/agribot_actuation/agribot_actuation/: latency_compensated_sprayer.py
src/agribot_bringup/: package.xml  setup.cfg  setup.py
src/agribot_bringup/agribot_bringup/: agribot_sim_core.py  hw_detection.py  system_guard.py
src/agribot_bringup/config/: agribot_rviz.rviz  slam_toolbox_async.yaml
src/agribot_bringup/launch/: autonomous_weeding.launch.py  control.launch.py  lidar.launch.py  main_launch.py  navigation.launch.py  perception.launch.py  simulation.launch.py  telemetry.launch.py  teleop.launch.py
src/agribot_control/: package.xml  setup.cfg  setup.py
src/agribot_control/agribot_control/: motor_bridge.py  spray_controller.py
src/agribot_description/: CMakeLists.txt  package.xml  setup.py
src/agribot_description/launch/: display.launch.py
src/agribot_description/urdf/: agribot.urdf.xacro
src/agribot_detection_manager/: package.xml  setup.cfg  setup.py
src/agribot_detection_manager/agribot_detection_manager/: mode_manager.py
src/agribot_mapping/: package.xml  setup.cfg  setup.py
src/agribot_mapping/agribot_mapping/: row_detector.py
src/agribot_msgs/: CMakeLists.txt  package.xml
src/agribot_msgs/action/: SprayAction.action
src/agribot_msgs/msg/: Detection.msg
src/agribot_perception/: package.xml  setup.cfg  setup.py
src/agribot_perception/agribot_perception/: detection_node.py  perception_node.py  sahi_runtime.py
src/agribot_perception/models/: agribot_yolov8.yaml
src/agribot_perception/scripts/: custom_modules.py  dataset_utils.py  ingest_datasets.py  rpi_dataset_prep.py  train_yolov8.py  verify_camera.py
src/agribot_simulation/: CMakeLists.txt  COLCON_IGNORE  package.xml  setup.py
src/agribot_simulation/launch/: simulation.launch.py
src/direct_visual_lidar_calibration/: CMakeLists.txt
src/robot-vision-system/: README.md
src/robot-vision-system/code/: camera_test.py  clean_color_tracking.py  color_detection.py  enhanced_color_detection.py  enhanced_color_tracking.py  neat_motion_tracking.py  polished_color_tracking.py
src/robot-vision-system/report/: description.txt  flowchart.txt
src/robot-vision-system/results/: output.png1  output.png2
src/sllidar_ros2/: CMakeLists.txt
tools/: __init__.py
tools/deployment/: agribot.service  dashboard.service  install.sh  install_telemetry.sh  requirements_telemetry.txt
tools/deployment/nginx/: agribot.conf
tools/deployment/systemd/: agribot.service
tools/pc_training/: __init__.py  dataset.yaml  test_random_weed_samples.py  train_yolov8.py  validate_onnx.py
tools/pc_training/precision_agri_pipeline/: README.md  __init__.py  common.py  data_ingestion.py  evaluate_and_plot.py  model_surgery.py  run_pipeline.py  sahi_inference.py  train_precision_agri.py
tools/pc_training/precision_agri_pipeline/models/: yolov8_p2_precision.yaml
