<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agribot_bringup</name>
  <version>1.0.0</version>
  <description>Bringup and orchestration for Agribot</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>agribot_perception</depend>
  <depend>agribot_control</depend>
  <depend>agribot_actuation</depend>
  <depend>agribot_detection_manager</depend>
  <depend>agribot_mapping</depend>
  <depend>agribot_description</depend>
  <depend>launch_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>tf2_ros</depend>
  <depend>usb_cam</depend>
  <depend>lifecycle_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
