<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agribot_bringup</name>
  <version>1.0.0</version>
  <description>Bringup and orchestration for Agribot</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>Apache License 2.0</license>

  <!-- Core (required) -->
  <depend>rclpy</depend>
  <depend>agribot_control</depend>
  <depend>agribot_description</depend>
  <depend>launch_ros</depend>
  <depend>tf2_ros</depend>
  <depend>lifecycle_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Optional subsystems — launch files gate on hardware presence -->
  <exec_depend>agribot_perception</exec_depend>
  <exec_depend>agribot_actuation</exec_depend>
  <exec_depend>agribot_detection_manager</exec_depend>
  <exec_depend>agribot_mapping</exec_depend>
  <exec_depend>agribot_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>usb_cam</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
