<?xml version="1.0"?>
<package format="3">
  <name>agribot_description</name>
  <version>1.0.0</version>
  <description>Robot description (URDF) for Agribot</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
