<?xml version="1.0"?>
<package format="3">
  <name>agribot_simulation</name>
  <version>1.0.0</version>
  <description>Gazebo simulation for Agribot</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>agribot_description</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
